--- a/LKM_wlasne_su/Makefile
+++ b/LKM_wlasne_su/Makefile
@@ -1,7 +1,7 @@
 obj-m := modul.o
 KDIR = /lib/modules/$(shell uname -r)/build
 all:
-	make -C /usr/src/linux-headers-2.6.32-41-generic-tuxonice SUBDIRS=${PWD}
+	make -C /usr/src/linux-headers-$(shell uname -r) SUBDIRS=${PWD}
 
 clean:
 	rm -f *.o *.tmp .*.o.* .tmp_versions/* .*.ko.cmd *.mod.c Module.symvers modules.order
